--- a/src/services/data/colors.css
+++ b/src/services/data/colors.css
@@ -23,7 +23,7 @@
   background-color: #f9dc30;
 }
 .Pandemic {
-  background-color: #2aad45;
+  background-color: #08ad4a;
 }
 .Phoenix {
   background-color: #fc8540;
