--- a/src/components/CharactersInfo/index.css
+++ b/src/components/CharactersInfo/index.css
@@ -1,42 +1,65 @@
 .personagem-container {
   display: flex;
-  overflow: hidden;
+  width: 100%;
+  gap: 40px;
+  /* background-color: red; */
+  /* overflow: hidden; */
 }
 
 .personagem-background {
  transform: scale(1.4);
+ filter: brightness(0);
 }
 
 .personagem-IMG {
-  transform: translateX(-150px);
+  /* transform: translateX(-150px); */
+  width: 95%;
+  position: absolute;
+  left: 35%;
+  bottom: 0;
+}
+
+.IMGs {
+  position: relative;
+  display: flex;
+  width: 100%;
 }
 
 .info-dos-personagens {
-  padding: 20px;
-  transform: translateX(-150px);
+  color: white;
+  padding-top: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  gap: 20px;
+  z-index: 1;
 }
 
 .skils-do-personagem {
   display: flex;
   flex-direction: column;
-  width: 230px;
   gap: 20px;
   justify-content: space-between;
 }
 
 .animacao {
-  animation: anime 2s;
+  animation: anime 1s
+}
+
+.icon-skils {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
 }
 
 @keyframes anime {
   from {
     filter: brightness(0);
+    transform: translateX(-20px);
   }
 
   to {
     filter: brightness(1);
+    transform: translateX(0);
+
   }
 }
