--- a/src/page/Home/index.css
+++ b/src/page/Home/index.css
@@ -1,19 +1,18 @@
 .main {
   margin: 40px auto 0;
   display: flex;
-  background-color: #2f2e33;
-  /* min-width: 50vw; */
-  /* max-width: 51vw; */
-  /* max-width: 600px; */
+  background-color: blue;
   width: fit-content;
   height: 70vh;
   position: relative;
+  overflow: hidden;
 }
 
 .personagem-info {
-  padding: 10px 20px;
+  padding: 10px 20px 0;
   display: flex;
-  flex: 1;
-  max-width: 700px;
+  /* flex: 1; */
+  max-width: 55vw;
+  overflow: hidden;
   /* background-color: white; */
 }
