--- a/src/components/CharactersInfo/index.css
+++ b/src/components/CharactersInfo/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200;300;400;500;600;700;800&display=swap');
+
 .personagem-container {
   display: flex;
+  flex-direction: row-reverse;
   width: 100%;
   gap: 40px;
   /* background-color: red; */
@@ -7,15 +10,17 @@
 }
 
 .personagem-background {
- transform: scale(1.4);
- filter: brightness(0);
+  transform: scale(1.4);
+  filter: brightness(0);
+  position: relative;
+  right: 20%;
 }
 
 .personagem-IMG {
   /* transform: translateX(-150px); */
   width: 95%;
   position: absolute;
-  left: 35%;
+  left: 15%;
   bottom: 0;
 }
 
@@ -32,6 +37,14 @@
   flex-direction: column;
   gap: 20px;
   z-index: 1;
+  font-family: 'Stick No Bills', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  text-shadow: 0 0 5px black;
+}
+
+.info-dos-personagens h1 {
+  font-size: 80px;
 }
 
 .skils-do-personagem {
@@ -42,7 +55,11 @@
 }
 
 .animacao {
-  animation: anime 1s
+  animation: anime 2s;
+}
+
+.animacaoBackground {
+  animation: animeBackgroud 2s;
 }
 
 .icon-skils {
@@ -53,13 +70,30 @@
 
 @keyframes anime {
   from {
+    /* opacity: 0; */
     filter: brightness(0);
-    transform: translateX(-20px);
+    transform: translateX(-25px);
   }
-
   to {
     filter: brightness(1);
     transform: translateX(0);
-
   }
+}
+
+@keyframes animeBackgroud {
+  from {
+    opacity: 0;
+    filter: blur(10px) brightness(0);
+    transform: scale(1.4);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0) brightness(0);
+    transform: translateX(0) scale(1.4);
+  }
+}
+
+.selected {
+  filter: brightness(0) drop-shadow(0 0 5px white);
+  padding: 2px;
 }
