--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -22,8 +22,9 @@ nav ul {
   text-decoration: none;
   position: relative;
   letter-spacing: 1px;
-  transition: all .5s;
+  transition: all 0.5s;
   opacity: 0.8;
+  font-family: 'Roboto', sans-serif;
 }
 
 .select {
@@ -43,13 +44,13 @@ nav ul {
   background-color: #ff4655;
   height: 2px;
   position: absolute;
-  animation: borderBottom .3s forwards ease-in;
+  animation: borderBottom 0.3s forwards ease-in;
   /* transition: all .3s; */
 }
 
 @keyframes borderBottom {
   to {
     width: 100%;
-    left: 0
+    left: 0;
   }
-};
+} ;
