teste media queryes resolutiion 1920

--- a/src/services/data/colors.css
+++ b/src/services/data/colors.css
@@ -8,7 +8,7 @@
   background-color: #ce3e7a;
 }
 .Grenadier {
-  background-color: #a5efff;
+  background-color: #3b60fb;
 }
 .Guide {
   background-color: #5a916e;
