--- a/src/components/CharactersInfo/index.css
+++ b/src/components/CharactersInfo/index.css
@@ -32,19 +32,18 @@
 
 .info-dos-personagens {
   color: white;
-  padding-top: 40px;
   display: flex;
   flex-direction: column;
   gap: 20px;
   z-index: 1;
   font-family: 'Stick No Bills', sans-serif;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 14px;
   text-shadow: 0 0 5px black;
 }
 
 .info-dos-personagens h1 {
-  font-size: 80px;
+  font-size: 60px;
 }
 
 .skils-do-personagem {
@@ -66,6 +65,9 @@
   width: 50px;
   height: 50px;
   cursor: pointer;
+  opacity: .5;
+  transition: .3s ease-out,transform .3s ease-out;
+  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
 }
 
 @keyframes anime {
@@ -94,6 +96,8 @@
 }
 
 .selected {
-  filter: brightness(0) drop-shadow(0 0 5px white);
+  filter: brightness(0);
+  opacity: 1;
+  transform: scale(1.2);
   padding: 2px;
 }
