--- a/src/components/CharactersInfo/index.css
+++ b/src/components/CharactersInfo/index.css
@@ -65,8 +65,7 @@
   width: 50px;
   height: 50px;
   cursor: pointer;
-  opacity: .5;
-  transition: .3s ease-out,transform .3s ease-out;
+  transition: all .3s;
   filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
 }
 
@@ -96,8 +95,28 @@
 }
 
 .selected {
-  filter: brightness(0);
-  opacity: 1;
+  /* transform: translateY(-5px); */
+  /* filter: brightness(0); */
   transform: scale(1.2);
-  padding: 2px;
+  border-radius: 5px;
+  opacity: 1;
+  background-color: black;
+}
+
+.descriptionSkill {
+  animation: annimeDescriptionSkill .3s ease-in;
+  transform: translateY(0);
+  opacity: 1;
+}
+
+@keyframes annimeDescriptionSkill {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
